# speech-to-cli

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  config.py  features.py  main.py  pyproject.toml  requirements.txt
packaging/homebrew/: speech-to-cli.rb
packaging/linux/: speech-to-cli.service
packaging/windows/: build.py
scripts/: dashboard.py  install-dashboard.sh  setup.sh  speech-to-cli-dashboard.desktop
src/speech_to_cli/: __init__.py  audio.py  cli.py  config.py  daemon.py  transcription.py
